<resources>
    <string name="app_name">FireStore</string>
    <string name="log_out">Log Out</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="firstname">FirstName</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="logout">LogOut</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="send_notification">Send Notification</string>
    <string name="welcome_to_home">Welcome To Home</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
</resources>