<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gradient_background"
            android:contentDescription="@string/cast_expanded_controller_ad_image_description" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/profile_circular_border_imageview"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cast_expanded_controller_ad_image_description" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image">

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFirstName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvdateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLastName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tvgender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvdateOfBirth"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvgender"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <Button
                android:id="@+id/btnLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPhone"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/customsignup"
                android:backgroundTint="@color/lightGrey"
                android:padding="10dp"
                android:text="@string/log_out"
                android:textColor="@color/purple_500"
                android:textStyle="bold" />


        </RelativeLayout>


    </RelativeLayout>
</ScrollView>