<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="activities.LoginActivity">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="username"
        android:background="@drawable/edittextborder"
        android:backgroundTint="@color/purple_500"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="12dp"
        android:autofillHints="username"
        android:background="@drawable/edittextborder"
        android:backgroundTint="@color/purple_500"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@drawable/customsignup"
        android:backgroundTint="@color/white"
        android:text="@string/login"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvRedirectToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvAlreadyAccount"
        app:layout_constraintStart_toEndOf="@+id/tvAlreadyAccount"
        app:layout_constraintTop_toTopOf="@+id/tvAlreadyAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>